--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=E-Shopper
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:x1f+2bllr//KLG1ljv8ZxZWckfechIlM/xks/kQUMtg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
