--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "feather-icons": "^4.21.0",
         "holderjs": "^2.9.6"
     }
 }
