--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
+        "realrashid/sweet-alert": "^1.1",
         "spatie/laravel-medialibrary": "^7.5"
     },
     "require-dev": {
